--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -40,5 +40,5 @@
 </div>
 <div mat-dialog-actions [align]="'end'">
   <button mat-raised-button color="warn" mat-dialog-close>Close</button>&nbsp;
-  <button mat-raised-button color="primary" (click)="postProduct()">Save</button>
+  <button mat-raised-button color="primary" (click)="postProduct()">{{actionBtn}}</button>
 </div>
